# nayak

./: ProjectHome.md
command_line_parsing/src/: command_line_parser.cpp  command_line_parser_inl.h  commandlineparser.pro  config.h  debug_helper.h  main.cpp
doc/: coding_guidelines.txt
licenses/: LICENSE.MIT
projects/command_line_parsing/src/: commandlineparser.cpp  commandlineparser.h  debug_helper.h
sample_programs/Qt/AppVersion/: AppVersion.pro  main.cpp
sample_programs/Qt/AppVersion2/: AppVersion.pro
sample_programs/Qt/MonitorWidth/: MonitorWidth.pro
sample_programs/Qt/Preprocessor/: Preprocessor.pro
sample_programs/X11/Motif/hello/: hello.c
sample_programs/X11/Motif/hello_i18n/: hello.c
sample_programs/c/c_lab/: is_palindrome_string.c  linear_search.c
sample_programs/c/check_for_prime_number/: CMakeLists.txt  Makefile  is_prime_number.c
sample_programs/c/factorial_using_looping/: CMakeLists.txt  Makefile
sample_programs/c/memory_leak/: main.cpp
sample_programs/cpp/tech_recipes/VirtualTable/: VirtualTable.pro
sample_programs/cpp/tech_recipes/memory_leak/: main.cpp
sample_programs/cpp/tech_recipes/pure_virtual_function-1/: main.cpp
sample_programs/opengl/ogl_utility/: ogl_utility.c  ogl_utility.h
trunk/command_line_parsing/src/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.h  command_line_parser.pro  globaldefines.h
trunk/doc/: coding_guidelines.txt
trunk/licenses/: LICENSE.BSD  gpl2_header.txt  gpl2_or_above_header.txt  gpl3_header.txt  gpl3_or_above_header.txt
trunk/projects/command_line_parsing/src/: main.cpp  (+1 more)
(+36 files in other folders)
